--- a/pwa/frontend/src/layouts/MainLayout.module.css
+++ b/pwa/frontend/src/layouts/MainLayout.module.css
@@ -268,10 +268,12 @@
 
   .main {
     padding: 1rem;
+    margin: 0rem auto;
   }
 
   .footer {
     font-size: 0.75rem;
     padding: 0.75rem;
+    margin-top: 1rem;
   }
 }
